classDiagram
    %%
    %% nextflow.container
    %%
    BashWrapperBuilder --> ContainerBuilder : build

    ContainerBuilder <|-- CharliecloudBuilder
    ContainerBuilder <|-- DockerBuilder
    ContainerBuilder <|-- PodmanBuilder
    ContainerBuilder <|-- ShifterBuilder
    ContainerBuilder <|-- SingularityBuilder
    ContainerBuilder <|-- UdockerBuilder
